--- a/game-client/src/app/pages/login/login.component.css
+++ b/game-client/src/app/pages/login/login.component.css
@@ -1,4 +1,5 @@
 .login-wrapper {
+    /* background-image: url('../../../assets/backgrounds/login_bg.svg'); */
     background-image: url('../../../assets/backgrounds/login_bg.svg');
     background-size: cover;
     background-position: center;
