--- a/game-client/src/app/pages/arena/arena.component.html
+++ b/game-client/src/app/pages/arena/arena.component.html
@@ -1,15 +1,25 @@
-<div class="arena-container">
-  <div class="arena-wrapper">
-    <div class="arena-panel">
-      <input
-        type="text"
-        [(ngModel)]="opponentName"
-        placeholder="Opponent name..."
-      />
-      <button class="find-btn" (click)="findOpponent()">FIND OPPONENT</button>
-      <button class="random-btn" (click)="randomOpponent()">
-        RANDOM OPPONENT
-      </button>
+<div class="arena-fullscreen-wrapper">
+  <div class="arena-container">
+    <div class="arena-wrapper">
+      <div class="arena-panel">
+        <input
+          type="text"
+          [(ngModel)]="opponentName"
+          placeholder="Opponent name..."
+        />
+        <button class="find-btn" (click)="findOpponent()">FIND OPPONENT</button>
+        <button class="random-btn" (click)="randomOpponent()">
+          RANDOM OPPONENT
+        </button>
+      </div>
     </div>
+  </div>
+
+  <!-- Dolne menu -->
+  <div class="bottom-nav">
+    <button (click)="navigateTo('quest')">QUEST</button>
+    <button (click)="navigateTo('character')">CHARACTER</button>
+    <button (click)="navigateTo('arena')">ARENA</button>
+    <button (click)="logout()">LOG OUT</button>
   </div>
 </div>
