--- a/game-client/src/app/pages/character/character.component.css
+++ b/game-client/src/app/pages/character/character.component.css
@@ -1,58 +1,85 @@
+.character-fullscreen-wrapper {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+}
+
 .character-container {
-    background-image: url('../../../assets/backgrounds/char_bg.png');
-    background-size: cover;
-    background-position: center;
-    color: #F3F3F3;
-    font-family: 'Pixelify Sans', sans-serif;
-    padding: 2rem;
-    display: flex;
-    gap: 3rem;
-    flex-wrap: wrap;
-  }
-  
-  .char-info {
-    min-width: 250px;
-    text-align: center;
-  }
-  
-  .avatar-img {
-    width: 120px;
-    height: auto;
-    margin-bottom: 1rem;
-  }
-  
-  .char-settings label,
-  .radio-group {
-    display: block;
-    margin: 1rem 0;
-  }
-  
-  .radio-group label {
-    margin-right: 1rem;
-    display: inline-block;
-  }
-  
-  .save-btn {
-    background-color: #F3F3F3;
-    color: #0C0C0C;
-    padding: 0.6rem 1.5rem;
-    font-family: inherit;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  
-  .save-btn:hover {
-    background-color: #F9F1A5;
-  }
-  
-  .levelup-container {
-    background-image: url('../../../assets/backgrounds/char_bg.png');
-    background-size: cover;
-    background-position: center;
-    padding: 3rem;
-    color: #F3F3F3;
-    font-family: 'Pixelify Sans', sans-serif;
-    text-align: center;
-  }
-  
+  flex: 1;
+  width: 100%;
+  background-image: url('/assets/backgrounds/char_bg.svg');
+  background-size: cover;
+  background-position: center;
+  color: #F3F3F3;
+  font-family: 'Pixelify Sans', sans-serif;
+  padding: 2rem;
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+}
+
+.char-info {
+  min-width: 250px;
+  text-align: center;
+}
+
+.avatar-img {
+  width: 120px;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.char-settings label,
+.radio-group {
+  display: block;
+  margin: 1rem 0;
+}
+
+.radio-group label {
+  margin-right: 1rem;
+  display: inline-block;
+}
+
+.save-btn {
+  background-color: #F3F3F3;
+  color: #0C0C0C;
+  padding: 0.6rem 1.5rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+.save-btn:hover {
+  background-color: #F9F1A5;
+}
+
+/* Dolne menu */
+.bottom-nav {
+  display: flex;
+  justify-content: space-around;
+  padding: 1rem;
+  border-top: 1px solid white;
+  background-color: #0C0C0C;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
+.bottom-nav button {
+  background: #fff;
+  color: #0C0C0C;
+  border: none;
+  padding: 0.4rem 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 4px;
+  font-family: 'Pixelify Sans', sans-serif;
+}
