--- a/game-client/src/app/components/arena-fight/arena-fight.component.css
+++ b/game-client/src/app/components/arena-fight/arena-fight.component.css
@@ -142,3 +142,9 @@
   border-radius: 4px;
   font-family: 'Pixelify Sans', sans-serif;
 }
+.title {
+  font-size: 1rem;
+  font-weight: normal;
+  color: #f3f3f3;
+  margin-top: -4px;
+}
